--- a/Src/Frontend/AddItem/add_item_view.html
+++ b/Src/Frontend/AddItem/add_item_view.html
@@ -10,53 +10,54 @@
     <body>
         <p>Add Item</p>
         <div class="container">
-            <div class="left">
-                <table class="item_list">
-                    <thead>
-                        <tr>
-                            <!--th width="200">Item List</th-->
-                            <th>name</th>
-                            <th>price</th>
-                            <th>cost</th>
-                            <th>amont</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>生茶</td>
-                            <td>160</td>
-                            <td>90</td>
-                            <td>24</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="right">
-                <form>
-                    <div>
-                        <label id="name" for="item_name">name</label>
-                        <input type="text" id="item_name" name="iname">
-                    </div>
-                    <div>
-                        <label id="price" for="item_price">price</label>
-                        <input type="number" id="item_price" name="iprice">
-                    </div>
-                    <div>
-                        <label id="cost" for="cost_price">cost price</label>
-                        <input type="number" id="cost_price" name="icost">
-                    </div>
-                    <div>
-                        <label id="amount" for="item_amount">amount</label>
-                        <input type="number" id="item_amount" name="iamount">
-                    </div>
-                    <div>
-                        <input id="submit" type="button" value="Add">
-                    </div>
-                    <div id="result"></div>
-                </form>
-            </div>
+            <main>
+                <div class="left">
+                    <table class="item_list">
+                        <thead>
+                            <tr>
+                                <!--th width="200">Item List</th-->
+                                <th>name</th>
+                                <th>price</th>
+                                <th>cost</th>
+                                <th>amount</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>生茶</td>
+                                <td>160</td>
+                                <td>90</td>
+                                <td>24</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="right">
+                    <form>
+                        <div>
+                            <label id="name" for="item_name">name</label>
+                            <input type="text" id="item_name" name="iname">
+                        </div>
+                        <div>
+                            <label id="price" for="item_price">price</label>
+                            <input type="number" id="item_price" name="iprice">
+                        </div>
+                        <div>
+                            <label id="cost" for="cost_price">cost price</label>
+                            <input type="number" id="cost_price" name="icost">
+                        </div>
+                        <div>
+                            <label id="amount" for="item_amount">amount</label>
+                            <input type="number" id="item_amount" name="iamount">
+                        </div>
+                        <div>
+                            <input id="submit" type="button" value="Add">
+                        </div>
+                    </form>
+                </div>
+            </main>
             <footer>
-
+                <div id="result"></div>
             </footer>
         </div>
     </body>
