ハンバーガーアイコンを追加した

--- a/Src/Frontend/BuyItem/buy_item_view.html
+++ b/Src/Frontend/BuyItem/buy_item_view.html
@@ -66,6 +66,9 @@
         <p id="input_item_name">name<input type="text" name="input_item_name"></p>
         <p id="input_item_amount">amount<input type="text" name="input_item_amount"></p>
         </div>
-        
+
+        <p class="menu_hamburger"><a href="#">MENU</a></p>
+
+
     </body>
 </html>
