Item list表示できた

--- a/Src/Frontend/AddItem/add_item_view.html
+++ b/Src/Frontend/AddItem/add_item_view.html
@@ -15,20 +15,20 @@
                     <table class="item_list">
                         <thead>
                             <tr>
-                                <!--th width="200">Item List</th-->
+                                <th>id</th>
                                 <th>name</th>
                                 <th>price</th>
                                 <th>cost</th>
                                 <th>amount</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
+                        <tbody id="list_body">
+                            <!--tr>
                                 <td>生茶</td>
                                 <td>160</td>
                                 <td>90</td>
                                 <td>24</td>
-                            </tr>
+                            </tr-->
                         </tbody>
                     </table>
                 </div>
