--- a/Src/Frontend/AddItem/add_item_view.html
+++ b/Src/Frontend/AddItem/add_item_view.html
@@ -25,10 +25,10 @@
                           <a class="nav-link" href="add_item_view.html">Add Item <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Delete Item</a>
+                          <a class="nav-link" href="../DeleteItem/delete_item_view.html">Delete Item</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Buy</a>
+                          <a class="nav-link" href="../BuyItem/buy_item_view.html">Buy</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="#">Request</a>
