formの入力部分にplaceholderを追加した

--- a/Src/Frontend/AddItem/add_item_view.html
+++ b/Src/Frontend/AddItem/add_item_view.html
@@ -13,7 +13,7 @@
     <body>
         <div class="container">
             <header>
-                <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <a class="navbar-brand" href="#">Merchandise-Manager</a>
                     <button class="navbar-toggler" type="button" id="navbar-button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
@@ -58,19 +58,19 @@
                     <form>
                         <div>
                             <label id="name" for="item_name">name</label>
-                            <input type="text" id="item_name" name="iname">
+                            <input type="text" id="item_name" name="iname" placeholder="name">
                         </div>
                         <div>
                             <label id="price" for="item_price">price</label>
-                            <input type="number" id="item_price" name="iprice">
+                            <input type="number" id="item_price" name="iprice" placeholder="price">
                         </div>
                         <div>
                             <label id="cost" for="cost_price">cost price</label>
-                            <input type="number" id="cost_price" name="icost">
+                            <input type="number" id="cost_price" name="icost" placeholder="cost price">
                         </div>
                         <div>
                             <label id="amount" for="item_amount">amount</label>
-                            <input type="number" id="item_amount" name="iamount">
+                            <input type="number" id="item_amount" name="iamount" placeholder="amount">
                         </div>
                         <div>
                             <input id="submit" type="button" class="btn btn-primary" value="Add">
