デザインの色変えた

--- a/Src/Frontend/AddItem/add_item_view.html
+++ b/Src/Frontend/AddItem/add_item_view.html
@@ -22,7 +22,7 @@
                     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                       <ul class="navbar-nav" id="navcontents">
                         <li class="nav-item active">
-                          <a class="nav-link" href="add_item_view.html">Add Item <span class="sr-only">(current)</span></a>
+                          <a class="nav-link" href="add_item_view.html">Add Item<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="#">Delete Item</a>
@@ -37,7 +37,7 @@
                     </div>
                   </nav>
             </header>
-            <p>Add Item</p>
+            <p class="comment">Add Item</p>
             <main>
                 <div class="left">
                     <table class="item_list">
