多少マシにした

--- a/Src/Frontend/AddItem/add_item_view.html
+++ b/Src/Frontend/AddItem/add_item_view.html
@@ -58,7 +58,7 @@
                     <form>
                         <div>
                             <label id="name" for="item_name">name</label>
-                            <input type="text" id="item_name" name="iname" placeholder="name">
+                            <input type="text" id="item_name" name="iname" >
                         </div>
                         <div>
                             <label id="price" for="item_price">price</label>
