--- a/Src/Frontend/AddItem/add_item_view.html
+++ b/Src/Frontend/AddItem/add_item_view.html
@@ -22,7 +22,7 @@
                     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                       <ul class="navbar-nav" id="navcontents">
                         <li class="nav-item active">
-                          <a class="nav-link" href="add_item_view.html">Add Item<span class="sr-only">(current)</span></a>
+                          <a class="nav-link" href="add_item_view.html">Add Item</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="#">Delete Item</a>
@@ -37,7 +37,7 @@
                     </div>
                   </nav>
             </header>
-            <p class="comment">Add Item</p>
+            <p class="title">Add Item</p>
             <main>
                 <div class="left">
                     <table class="item_list">
@@ -58,19 +58,19 @@
                     <form>
                         <div>
                             <label id="name" for="item_name">name</label>
-                            <input type="text" id="item_name" name="iname" >
+                            <input type="text" id="item_name" name="iname">
                         </div>
                         <div>
                             <label id="price" for="item_price">price</label>
-                            <input type="number" id="item_price" name="iprice" placeholder="price">
+                            <input type="number" id="item_price" name="iprice">
                         </div>
                         <div>
                             <label id="cost" for="cost_price">cost price</label>
-                            <input type="number" id="cost_price" name="icost" placeholder="cost price">
+                            <input type="number" id="cost_price" name="icost">
                         </div>
                         <div>
                             <label id="amount" for="item_amount">amount</label>
-                            <input type="number" id="item_amount" name="iamount" placeholder="amount">
+                            <input type="number" id="item_amount" name="iamount">
                         </div>
                         <div>
                             <input id="submit" type="button" class="btn btn-primary" value="Add">
