オーダーサブミット機能が最低限できた

--- a/Src/Frontend/Order/order.html
+++ b/Src/Frontend/Order/order.html
@@ -55,31 +55,10 @@
                   </table>
                 </div>
                 <div class="right">
-                    <form>
-                        <div>
-                          <label id="id" for="order_id">id</label>
-                          <input type="text" id="order_id" name="oid">
-                        </div>
-                        <div>
-                            <label id="name" for="order_name">name</label>
-                            <input type="text" id="order_name" name="oname">
-                        </div>
-                        <div>
-                            <label id="price" for="order_price">price</label>
-                            <input type="number" id="order_price" name="oprice">
-                        </div>
-                        <div>
-                            <label id="amount" for="order_amount">amount</label>
-                            <input type="number" id="order_amount" name="oamount">
-                        </div>
-                        <div>
-                          <label id="total" for="order_total">price</label>
-                          <input type="number" id="order_total" name="ototal">
-                        </div>
-                        <div>
-                            <input id="submit" type="button" class="btn btn-primary" value="Add to Order">
-                        </div>
-                    </form>
+                  <div id="order_info"></div>
+                  <div>
+                    <input id="submit" type="button" class="btn btn-primary" value="Add to Order">
+                  </div>
                 </div>
             </main>
             <footer>
