auth still have problem

--- a/Src/Frontend/Login/login_view.html
+++ b/Src/Frontend/Login/login_view.html
@@ -15,33 +15,13 @@
             <header>
                 <nav class="navbar navbar-expand-lg navbar-light bg-light ">
                     <a class="navbar-brand" href="#">Merchandise-Manager</a>
-                    <!--button class="navbar-toggler" type="button" id="navbar-button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button-->
-                      
-                    <!--div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                      <ul class="navbar-nav" id="navcontents">
-                        <li class="nav-item active">
-                          <a class="nav-link" href="add_item_view.html">Add Item <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#">Delete Item</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#">Buy</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#">Request</a>
-                        </li>
-                      </ul>
-                    </div-->
                 </nav>
             </header>
             <p>Login</p>
             <main>
                 <form>
                     <div>
-                        <label id="uid" for="userid">User ID</label>
+                        <label id="uid" for="userid">User Name</label>
                         <input type="text" id="userid" name="uid">
                     </div>
                     <div>
