リンク修正

--- a/Src/Frontend/Order/order.html
+++ b/Src/Frontend/Order/order.html
@@ -31,7 +31,7 @@
                           <a class="nav-link" href="http://163.221.29.46:13131/buyItemHTML">Buy</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="http://163.221.29.46:13131/orderItemHTML">Order</a>
+                          <a class="nav-link" href="http://163.221.29.46:13131/orderHTML">Order</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="#">Request</a>
