--- a/Src/Frontend/Request4C/request4c.html
+++ b/Src/Frontend/Request4C/request4c.html
@@ -8,7 +8,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="request4cJS"></script>
         <link rel="stylesheet" href="request4cCSS">
-        <title>Add Item</title>
+        <title>Request</title>
     </head>
     <body>
         <div class="container">
@@ -45,7 +45,7 @@
                 <div class="form">
                     <form>
                         <div>
-                            <label id="userid" for="uid">User Name</label>
+                            <label id="userid" for="uid">user name</label>
                             <input type="text" id="uid" name="uid">
                         </div>
                         <div>
