--- a/Src/Frontend/Login/login_view.html
+++ b/Src/Frontend/Login/login_view.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="login_management.js"></script>
-        <link rel="stylesheet" href="login.css">
+        <script type="text/javascript" src="/loginJS"></script>
+        <link rel="stylesheet" href="/loginCSS">
         <title>Login</title>
     </head>
     <body>
