--- a/Src/Frontend/Request4M/request4M.html
+++ b/Src/Frontend/Request4M/request4M.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="request4MJS"></script>
+        <script type="text/javascript" src="request4mJS"></script>
         <link rel="stylesheet" href="request4mCSS">
         <title>Request for Manager</title>
     </head>
