--- a/Src/Frontend/Request4C/request4c.html
+++ b/Src/Frontend/Request4C/request4c.html
@@ -49,15 +49,15 @@
                             <input type="text" id="uid" name="uid">
                         </div>
                         <div>
-                            <label id="itemname" for="item_name">price</label>
-                            <input type="number" id="item_name" name="iname">
+                            <label id="itemname" for="item_name">item name</label>
+                            <input type="text" id="item_name" name="iname">
                         </div>
                         <div>
                             <label id="amount" for="item_amount">amount</label>
                             <input type="number" id="item_amount" name="iamount">
                         </div>
                         <div>
-                            <input id="submit" type="button" class="btn btn-primary" value="request4cJS">
+                            <input id="submit" type="button" class="btn btn-primary" value="Request">
                         </div>
                     </form>
                 </div>
