フォームイベント修正

--- a/Src/Frontend/Request4M/request4m.html
+++ b/Src/Frontend/Request4M/request4m.html
@@ -61,7 +61,7 @@
                 <div class="right">
                     <form>
                         <div>
-                            <label id="id" for="item_name">id</label>
+                            <label id="id" for="id">id</label>
                             <input type="text" id="id" name="id">
                         </div> 
                         <div>
