フォームイベント修正

--- a/Src/Frontend/Request4M/request4m.html
+++ b/Src/Frontend/Request4M/request4m.html
@@ -61,8 +61,8 @@
                 <div class="right">
                     <form>
                         <div>
-                            <label id="id" for="id">id</label>
-                            <input type="text" id="id" name="id">
+                            <label id="id" for="oid">id</label>
+                            <input type="text" id="oid" name="oid">
                         </div> 
                         <div>
                             <label id="name" for="item_name">item name</label>
