--- a/Src/Frontend/DeleteItem/delete_item_view.html
+++ b/Src/Frontend/DeleteItem/delete_item_view.html
@@ -18,17 +18,20 @@
                     <button class="navbar-toggler" type="button" id="navbar-button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
-                      
+
                     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                       <ul class="navbar-nav" id="navcontents">
                         <li class="nav-item">
-                          <a class="nav-link" href="../AddItem/add_item_view.html">Add Item <span class="sr-only">(current)</span></a>
+                          <a class="nav-link" href="http://163.221.29.46:13131/addItemHTML">Add Item <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                          <a class="nav-link" href="delete_item_view.html">Delete Item</a>
+                          <a class="nav-link" href="http://163.221.29.46:13131/deleteItemHTML">Delete Item</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Buy</a>
+                          <a class="nav-link" href="http://163.221.29.46:13131/buyItemHTML">Buy</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="http://163.221.29.46:13131/orderHTML">Order</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="#">Request</a>
@@ -60,7 +63,7 @@
                         <div>
                             <label id="name" for="item_name">name</label>
                             <input type="text" id="item_name" name="iname">
-                        </div> 
+                        </div>
                         <div>
                             <label id="amount" for="item_amount">amount</label>
                             <input type="number" id="item_amount" name="iamount">
