--- a/Src/Frontend/Login/login_view.html
+++ b/Src/Frontend/Login/login_view.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="/loginJS"></script>
-        <link rel="stylesheet" href="/loginCSS">
+        <link rel="stylesheet" href="loginCSS">
         <title>Login</title>
     </head>
     <body>
@@ -21,7 +21,7 @@
             <main>
                 <form>
                     <div>
-                        <label id="uid" for="userid">User Name</label>
+                        <label id="uid" for="userid">User Namea</label>
                         <input type="text" id="userid" name="uid">
                     </div>
                     <div>
