--- a/Src/Frontend/Login/login_view.html
+++ b/Src/Frontend/Login/login_view.html
@@ -21,7 +21,7 @@
             <main>
                 <form>
                     <div>
-                        <label id="uid" for="userid">User Namea</label>
+                        <label id="uid" for="userid">User Name</label>
                         <input type="text" id="userid" name="uid">
                     </div>
                     <div>
