リンクの修正

--- a/Src/Frontend/Login/login_view.html
+++ b/Src/Frontend/Login/login_view.html
@@ -31,7 +31,7 @@
                     <div>
                         <input id="submit" type="button" class="btn btn-primary" value="Login">
                     </div>
-                    <a href="../RegisterAccount/register_account_view.html">Register new Account</a>
+                    <a href="http://163.221.29.46:13131/registerHTML">Register new Account</a>
                 </form>
             </main>
             <footer>
