オーダーボタンの文言を修正

--- a/Src/Frontend/Order/order.html
+++ b/Src/Frontend/Order/order.html
@@ -60,7 +60,7 @@
                 <div class="right">
                   <div id="order_info"></div>
                   <div>
-                    <input id="submit" type="button" class="btn btn-primary" value="Add to Order">
+                    <input id="submit" type="button" class="btn btn-primary" value="Order">
                   </div>
                 </div>
             </main>
