--- a/Src/Frontend/AddItem/add_item_view.html
+++ b/Src/Frontend/AddItem/add_item_view.html
@@ -14,7 +14,7 @@
         <div class="container">
             <header>
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <a class="navbar-brand" href="#">Merchandise-Manager</a>
+                    <a class="navbar-brand" href="http://163.221.29.46:13131/buyItemHTML">Merchandise-Manager</a>
                     <button class="navbar-toggler" type="button" id="navbar-button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
