--- a/Src/Frontend/Login/login_view.html
+++ b/Src/Frontend/Login/login_view.html
@@ -14,7 +14,7 @@
         <div class="container">
             <header>
                 <nav class="navbar navbar-expand-lg navbar-light bg-light ">
-                    <a class="navbar-brand" href="#">Merchandise-Manager</a>
+                    <a class="navbar-brand" href="http://163.221.29.46:13131/buyItemHTML">Merchandise-Manager</a>
                 </nav>
             </header>
             <p>Login</p>
