--- a/Src/Frontend/Request4C/request4c.html
+++ b/Src/Frontend/Request4C/request4c.html
@@ -14,14 +14,14 @@
         <div class="container">
             <header>
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <a class="navbar-brand" href="#">Merchandise-Manager</a>
+                    <a class="navbar-brand" href="http://163.221.29.46:13131/buyItemHTML">Merchandise-Manager</a>
                     <button class="navbar-toggler" type="button" id="navbar-button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
                       
                     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                       <ul class="navbar-nav" id="navcontents">
-                        <li class="nav-item active">
+                        <li class="nav-item">
                           <a class="nav-link" href="http://163.221.29.46:13131/addItemHTML">Add Item</a>
                         </li>
                         <li class="nav-item">
@@ -33,7 +33,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="http://163.221.29.46:13131/orderHTML">Order</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item active">
                           <a class="nav-link" href="http://163.221.29.46:13131/request4cHTML">Request</a>
                         </li>
                       </ul>
