--- a/Src/Frontend/BuyItem/buy_item_view.html
+++ b/Src/Frontend/BuyItem/buy_item_view.html
@@ -34,7 +34,7 @@
                             <a class="nav-link" href="http://163.221.29.46:13131/orderHTML">Order</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Request</a>
+                          <a class="nav-link" href="http://163.221.29.46:13131/request4cHTML">Request</a>
                         </li>
                       </ul>
                     </div>
